@@ -2,8 +2,9 @@
 combine_as_imports = true
 default_section = THIRDPARTY
 include_trailing_comma = true
-known_tests = pytest,unittest,factory
+known_django = django
 known_demo = demo
+known_tests = pytest,unittest,factory
 sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,TESTS,FIRSTPARTY,DEMO,LOCALFOLDER
 known_first_party = unicef_vision
 multi_line_output = 3
